<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/map"
        android:enabled="true"
        android:icon="@drawable/ic_btn_nav_map"
        android:title="@string/map" />
    <item
        android:id="@+id/partners"
        android:enabled="true"
        android:icon="@drawable/ic_btn_nav_partners"
        android:title="@string/partners" />
    <item
        android:id="@+id/handbook"
        android:enabled="true"
        android:icon="@drawable/ic_btn_nav_eco_git"
        android:title="@string/directory" />
<!--    <item-->
<!--        android:id="@+id/rating"-->
<!--        android:enabled="true"-->
<!--        android:icon="@drawable/ic_btn_nav_rating"-->
<!--        android:title="@string/user_rating" />-->
    <item
        android:id="@+id/news"
        android:enabled="true"
        android:icon="@drawable/ic_simple_silver_news"
        android:title="@string/News" />

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_simple_silver_profile"
        android:title="@string/profile_title" />
</menu>