<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.city.CityActivity">

    <ImageView
        android:id="@+id/back_city"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:padding="10dp"
        android:src="@drawable/ic_simple_dark_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_choose_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/sfprodisplay_heavy"
        android:text="@string/choose_city"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_city" />

    <TextView
        android:id="@+id/tv_show_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/sfprodisplay_regular"
        android:text="@string/check_your_place"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_choose_city" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/sv_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_shape_silver_12dp_f2f1f4"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:iconifiedByDefault="false"
        app:iconifiedByDefault="false"
        app:layout_constraintTop_toBottomOf="@+id/tv_show_place"
        app:queryBackground="@null"
        app:queryHint="@string/search_city" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_city"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        app:layout_constraintBottom_toTopOf="@id/btn_city_next"
        app:layout_constraintTop_toBottomOf="@+id/sv_city" />


    <Button
        android:id="@+id/btn_city_next"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_shape_silver_12dp_7b818c"
        android:enabled="false"
        android:fontFamily="@font/sfprodisplay_bold"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>