<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/update_dialog"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ans_dialog"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_shape_silver_4dp_f2f1f4"
        android:backgroundTint="@color/color_white_FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_title"
            android:textSize="20sp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/sfprodisplay_bold"
            android:textColor="@color/color_dark_161C25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/update_message"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:layout_marginTop="27dp"
            android:clickable="true"
            android:focusable="true"
            android:textSize="16sp"
            android:layout_marginStart="64dp"
            android:layout_marginBottom="21dp"
            android:textColor="@color/colorAccent_8CC341"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/message"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:layout_marginBottom="21dp"
            android:text="@string/update"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/colorAccent_8CC341"
            android:fontFamily="@font/sfprodisplay_bold"
            android:textSize="16sp"
            android:layout_marginEnd="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/message" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
