<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.changeNumber.ChangeNumActivity">

    <include layout="@layout/custom_toolbar" />

    <TextView
        android:id="@+id/tv_now_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/current_number"
        android:textColor="@android:color/black"
        android:fontFamily="@font/sfprodisplay_semibold"
        app:layout_constraintBottom_toTopOf="@id/tv_change_number"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_change_number"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="38dp"
        android:background="@drawable/rounded_shape_silver_12dp_f2f1f4"
        android:gravity="center"
        android:hint="+996 (xxx) xx xx xx"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_send_code_change_num" />


    <TextView
        android:id="@+id/tv_send_code_change_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfprodisplay_medium"
        android:layout_marginBottom="36dp"
        android:text="@string/click_to_change_number"
        app:layout_constraintBottom_toTopOf="@id/btn_change_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_change_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_selector_green_gradwith_grn_sil"
        android:text="@string/send_code"
        android:fontFamily="@font/sfprodisplay_bold"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>