<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.citizen.profile.item_profile.profile_info.EditProfileActivity">

    <include layout="@layout/custom_toolbar" />

    <com.mikhaellopez.circularimageview.CircularImageView
        app:civ_border_color="@color/color_white_FFFFFF"
        app:civ_border_width="0dp"
        app:civ_shadow="true"
        app:civ_shadow_color="@color/color_silver_8492A4"
        app:civ_shadow_radius="5dp"
        android:id="@+id/img_profile_edit_info"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_place_holder_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />


    <TextView
        android:id="@+id/tv_add_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sfprodisplay_bold"
        android:text="@string/load_image"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_profile_edit_info" />


    <TextView
        android:id="@+id/tv_name_edit_prof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/sfprodisplay_semibold"
        android:text="@string/name"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_pic" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_name_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_shape_silver_12dp_f2f1f4"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_edit_prof">

        <EditText
            android:id="@+id/tv_name_et_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:fontFamily="@font/sfprodisplay_medium"
            android:gravity="center_vertical"
            android:hint="@string/enter_name"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_city_edit_prof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/sfprodisplay_semibold"
        android:text="@string/city"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/const_name_edit_profile" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_city_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_shape_silver_12dp_f2f1f4"
        app:layout_constraintTop_toBottomOf="@+id/tv_city_edit_prof">

        <TextView
            android:id="@+id/tv_city_prof"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/sfprodisplay_medium"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/choose_city"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/tv_phone_edit_prof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/sfprodisplay_semibold"
        android:text="@string/phone"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/const_city_edit_profile" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_phone_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_shape_silver_12dp_f2f1f4"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone_edit_prof">

        <TextView
            android:id="@+id/tv_phone_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/sfprodisplay_medium"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:text="+996 (700) 700 700" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white_FFFFFF"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_update_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="12dp"
            android:background="@drawable/rounded_shape_green_12dp_8cc341"
            android:text="@string/tv_save"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>